--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -44,31 +44,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -76,13 +83,14 @@
       ],
       "text/plain": [
        "   x_origin  y_origin  x_length  y_length\n",
-       "0         1         1         1         1\n",
-       "1        -1        -1         1         1\n",
-       "2        -1         2         1         1\n",
-       "3         3         0         2         2"
+       "0       1.0       1.0       1.0       1.0\n",
+       "1      -1.0      -1.0       1.0       1.0\n",
+       "2      -1.0       2.0       1.0       1.0\n",
+       "3       3.0       0.0       2.0       2.0\n",
+       "4       2.0      -2.0       1.0       1.0"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -127,38 +135,73 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>-10.0</td>\n",
+       "      <td>-10.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>-5.0</td>\n",
+       "      <td>-8.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>-5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>-5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -166,14 +209,19 @@
       ],
       "text/plain": [
        "   x_origin  y_origin  x_length  y_length\n",
-       "0         1         1         1         1\n",
-       "1        -1        -1         1         1\n",
-       "2        -1         2         1         1\n",
-       "3         3         0         2         2\n",
-       "4         5         5         5         5"
+       "0       1.0       1.0       1.0       1.0\n",
+       "1      -1.0      -1.0       1.0       1.0\n",
+       "2      -1.0       2.0       1.0       1.0\n",
+       "3       3.0       0.0       2.0       2.0\n",
+       "4       2.0      -2.0       1.0       1.0\n",
+       "5     -10.0     -10.0       1.0       1.0\n",
+       "6      -5.0      -8.0       2.0       2.0\n",
+       "7      -5.0       0.0       2.0       3.0\n",
+       "8      -5.0       0.0       2.0       3.0\n",
+       "9       5.0       5.0       5.0       5.0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +234,66 @@
     "    'y_length': 5\n",
     "}\n",
     "# new_element = pd.DataFrame(new_element)\n",
-    "blocks.append(new_element, ignore_index=True)"
+    "blocks.append(new_element, ignore_index=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1, -1, -1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1,  1,  1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1,  1,  1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "matrix = np.full((10, 10), -1, dtype=int)\n",
+    "matrix[1:3,1:3] = 1\n",
+    "matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Warehouse' object has no attribute 'place_block'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_21632/2901264558.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mwh\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mWarehouse\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mwh\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_blocks_from_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"blocks.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mwh\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplace_block\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwh\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwarehouse_matrix\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Warehouse' object has no attribute 'place_block'"
+     ]
+    }
+   ],
+   "source": [
+    "from warehouse import Warehouse\n",
+    "\n",
+    "wh = Warehouse(10,10)\n",
+    "wh.get_blocks_from_csv(\"blocks.csv\")\n",
+    "wh.place_block(1,1,1)\n",
+    "print(wh.warehouse_matrix[1,1])\n"
    ]
   }
  ],
