rozwiniecie warehouse, dodanie evaluator i poczatek EvolutionaryAlgorithm

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -46,36 +46,29 @@
        "      <th>0</th>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>-2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -83,14 +76,13 @@
       ],
       "text/plain": [
        "   x_origin  y_origin  x_length  y_length\n",
-       "0       1.0       1.0       1.0       1.0\n",
-       "1      -1.0      -1.0       1.0       1.0\n",
-       "2      -1.0       2.0       1.0       1.0\n",
-       "3       3.0       0.0       2.0       2.0\n",
-       "4       2.0      -2.0       1.0       1.0"
+       "0       1.0       1.0       3.0       3.0\n",
+       "1       5.0       1.0       1.0       1.0\n",
+       "2       1.0       7.0       1.0       1.0\n",
+       "3       3.0       5.0       2.0       2.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -137,67 +129,32 @@
        "      <th>0</th>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>-2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>-10.0</td>\n",
-       "      <td>-10.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>-5.0</td>\n",
-       "      <td>-8.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>-5.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>-5.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
        "      <td>5.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>5.0</td>\n",
@@ -209,19 +166,14 @@
       ],
       "text/plain": [
        "   x_origin  y_origin  x_length  y_length\n",
-       "0       1.0       1.0       1.0       1.0\n",
-       "1      -1.0      -1.0       1.0       1.0\n",
-       "2      -1.0       2.0       1.0       1.0\n",
-       "3       3.0       0.0       2.0       2.0\n",
-       "4       2.0      -2.0       1.0       1.0\n",
-       "5     -10.0     -10.0       1.0       1.0\n",
-       "6      -5.0      -8.0       2.0       2.0\n",
-       "7      -5.0       0.0       2.0       3.0\n",
-       "8      -5.0       0.0       2.0       3.0\n",
-       "9       5.0       5.0       5.0       5.0"
+       "0       1.0       1.0       3.0       3.0\n",
+       "1       5.0       1.0       1.0       1.0\n",
+       "2       1.0       7.0       1.0       1.0\n",
+       "3       3.0       5.0       2.0       2.0\n",
+       "4       5.0       5.0       5.0       5.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,61 +191,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[-1, -1, -1, -1, -1, -1, -1, -1, -1, -1],\n",
-       "       [-1,  1,  1, -1, -1, -1, -1, -1, -1, -1],\n",
-       "       [-1,  1,  1, -1, -1, -1, -1, -1, -1, -1],\n",
-       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1],\n",
-       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1],\n",
-       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1],\n",
-       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1],\n",
-       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1],\n",
-       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1],\n",
-       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1]])"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "IndexError",
+     "evalue": "index 4 is out of bounds for axis 0 with size 2",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_21632/903657316.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mmatrix\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfull\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mmatrix\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mmatrix\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m: index 4 is out of bounds for axis 0 with size 2"
+     ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "matrix = np.full((10, 10), -1, dtype=int)\n",
+    "matrix = np.full((2, 2), -1, dtype=int)\n",
     "matrix[1:3,1:3] = 1\n",
-    "matrix"
+    "matrix[4,1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Warehouse' object has no attribute 'place_block'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_21632/2901264558.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mwh\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mWarehouse\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mwh\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_blocks_from_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"blocks.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mwh\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplace_block\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwh\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwarehouse_matrix\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Warehouse' object has no attribute 'place_block'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from warehouse import Warehouse\n",
+    "# from warehouse import Warehouse\n",
     "\n",
-    "wh = Warehouse(10,10)\n",
-    "wh.get_blocks_from_csv(\"blocks.csv\")\n",
-    "wh.place_block(1,1,1)\n",
-    "print(wh.warehouse_matrix[1,1])\n"
+    "# wh = Warehouse(10,10)\n",
+    "# wh.get_blocks_from_csv(\"blocks.csv\")\n",
+    "# # wh.place_block(1,1,1)\n",
+    "# print(wh.warehouse_matrix)\n",
+    "# # a = np.zeros((3,7))\n",
+    "# # a.shape[1]"
    ]
   }
  ],
