dodanie foldrow scripts i data

--- a/scripts/test.ipynb
+++ b/scripts/test.ipynb
@@ -210,8 +210,7 @@
     "import numpy as np\n",
     "\n",
     "matrix = np.full((2, 2), -1, dtype=int)\n",
-    "matrix[1:3,1:3] = 1\n",
-    "matrix[4,1]"
+    "matrix[1:3,1:3] = 1"
    ]
   },
   {
